# VE482-l6-debug

./: .directory  .gitignore  CMakeLists.txt  README.md  diff.sh
bugs/: team1.txt  team10.txt  team2.txt  team4.txt  team5.txt  team6.txt  team8.txt
group1/: BUG.md  CMakeLists.txt  dec_char*.txt  inc_int.txt  lab4_dlist.c  lab4_dlist.c.diff  lab4_dlist.debug.c  lab4_dlist.h  main.c  main.c.diff  main.debug.c
group10/: CMakeLists.txt  bug&credits.txt  dec_int.txt  list.c.diff  list.debug.c  logic.c.diff  logic.debug.c  rand_int.txt
group10/buggy code/: CMakeLists.txt  interface.c  list.c  list.h  logic.c  logic.h
group2/: CMakeLists.txt  dlist.c.diff  filehandler.c.diff  inc_str.txt  sort.c.diff
group2/includes/: dlist.h
group2/lib/: cmp.c  sort.c  sort.debug.c
group2/src/: dlist.c  dlist.debug.c  filehandler.c  main.c  (+1 more)
group3/: CMakeLists.txt  README.md  dlist.bug.c  main.c
group4/: CMakeLists.txt  dlist.c  dlist.c.diff  dlist.debug.c  dlist.h  h3.debug.c  inc_char.txt  read.c  read.c.diff  read.debug.c  read.h
group5/: CMakeLists.txt  bug list.txt  bug1.list.c.diff  bug2.dlist.c.diff  inc_int.txt  lab6bug.c  lab6bug.c.diff  lab6bug.debug.c
group6/: CMakeLists.txt  README.txt  command.c  dlist.c  dlist.c.diff  dlist.debug.c  dlist.h  menu.c  rand_double.txt
group7/: CMakeLists.txt  dlist.c  dlist.h  list.c  list.h  main.c  sort.c  sort.h
group8/: CMakeLists.txt  README.txt  lab4_dlist.c  lab4_dlist.c.diff  lab4_dlist.debug.c  lab4_dlist.h  test.c
group9/: CMakeLists.txt  lab4_dlist.c  lab4_dlist.h  list.h  list_BUG.c  main.c  readme.md
(+22 files in other folders)
