cmake_minimum_required(VERSION 3.5)
project(VE482_l6_debug)

set(CMAKE_C_STANDARD 11)
add_subdirectory(group1)
add_subdirectory(group2)
add_subdirectory(group3)
add_subdirectory(group4)
add_subdirectory(group5)
add_subdirectory(group6)
add_subdirectory(group7)
add_subdirectory(group8)
add_subdirectory(group9)
add_subdirectory(group10)
